@@ -1,0 +1,42 @@
+# $PostgreSQL: pgsql/src/interfaces/ecpg/compatlib/exports.txt,v 1.1 2007/10/03 13:20:19 meskes Exp $
+# Functions to be exported by ecpg_compatlib DLL
+ECPG_informix_get_var	1
+ECPG_informix_set_var	2
+decadd			3
+deccmp			4
+deccopy			5
+deccvasc		6
+deccvdbl		7
+deccvint		8
+deccvlong		9
+decdiv			10
+decmul			11
+decsub			12
+dectoasc		13
+dectodbl		14
+dectoint		15
+dectolong		16
+dtcurrent		17
+dtcvasc			18
+dtcvfmtasc		19
+dtsub			20
+dttoasc			21
+dttofmtasc		22
+intoasc			23
+rdatestr		24
+rdayofweek		25
+rdefmtdate		26
+rfmtdate		27
+rfmtlong		28
+rgetmsg			29
+risnull			30
+rjulmdy			31
+rmdyjul			32
+rsetnull		33
+rstrdate		34
+rtoday			35
+rtypalign		36
+rtypmsize		37
+rtypwidth		38
+rupshift		39
+
