@@ -4,7 +4,7 @@
 #
 # Copyright (c) 1994, Regents of the University of California
 #
-# $PostgreSQL: pgsql/src/interfaces/ecpg/pgtypeslib/Makefile,v 1.33 2007/09/27 19:53:44 tgl Exp $
+# $PostgreSQL: pgsql/src/interfaces/ecpg/pgtypeslib/Makefile,v 1.34 2007/10/03 13:20:19 meskes Exp $
 #
 #-------------------------------------------------------------------------
 
@@ -13,8 +13,8 @@ top_builddir = ../../../..
 include $(top_builddir)/src/Makefile.global
 
 NAME= pgtypes
-SO_MAJOR_VERSION= 2
-SO_MINOR_VERSION= 3
+SO_MAJOR_VERSION= 3
+SO_MINOR_VERSION= 0
 DLTYPE= library
 
 override CPPFLAGS := -I../include -I$(top_srcdir)/src/interfaces/ecpg/include \
@@ -30,10 +30,59 @@ OBJS= numeric.o datetime.o common.o dt_common.o timestamp.o interval.o \
 	pgstrcasecmp.o \
 	$(filter rint.o snprintf.o, $(LIBOBJS))
 
+ifneq ($(PORTNAME), win32)
+DLL_DEFFILE=libpgtypesdll.def
+endif
+
 all: all-lib
 
 # Shared library stuff
 include $(top_srcdir)/src/Makefile.shlib
+
+# We need several not-quite-identical variants of .DEF files to build libecpg
+# DLLs for Windows.  These are made from the single source file exports.txt.
+# Since we can't assume that Windows boxes will have sed, the .DEF files are
+# always built and included in distribution tarballs.
+
+.PHONY: def-files
+def-files: $(srcdir)/libpgtypes.def $(srcdir)/blibpgtypesdll.def
+$(srcdir)/libpgtypes.def: exports.txt
+	echo '; DEF file for MS VC++' > $@
+	echo 'LIBRARY LIBPGTYPES' >> $@
+	echo 'EXPORTS' >> $@
+	sed -e '/^#/d' -e 's/^\(.* \)\([0-9][0-9]*\)/    \1@ \2/' < $< >> $@
+
+$(srcdir)/blibpgtypesdll.def: exports.txt
+	echo '; DEF file for Borland C++ Builder' > $@
+	echo 'LIBRARY BLIBPGTYPES' >> $@
+	echo 'EXPORTS' >> $@
+	sed -e '/^#/d' -e 's/^\(.* \)\([0-9][0-9]*\)/    _\1@ \2/' < $< >> $@
+	echo '' >> $@
+	echo '; Aliases for MS compatible names' >> $@
+	sed -e '/^#/d' -e 's/^\(.* \)\([0-9][0-9]*\)/    \1= _\1/' < $< | sed 's/ *$$//' >> $@
+
+# Where possible, restrict the symbols exported by the library to just the
+# official list, so as to avoid unintentional ABI changes.
+
+ifeq ($(PORTNAME), darwin)
+$(shlib): exports.list
+
+exports.list: exports.txt
+	$(AWK) '/^[^#]/ {printf "_%s\n",$$1}' $< >$@
+
+exported_symbols_list = -exported_symbols_list exports.list
+endif
+
+ifeq ($(PORTNAME), linux)
+$(shlib): exports.list
+
+exports.list: exports.txt
+	echo '{ global:' >$@
+	$(AWK) '/^[^#]/ {printf "%s;\n",$$1}' $< >>$@
+	echo ' local: *; };' >>$@
+
+exported_symbols_list = -Wl,--version-script=exports.list
+endif
 
 # We use some port modules verbatim, but since we need to
 # compile with appropriate options to build a shared lib, we can't
@@ -51,4 +100,4 @@ installdirs:
 uninstall: uninstall-lib
 
 clean distclean maintainer-clean: clean-lib
-	rm -f $(OBJS) pgstrcasecmp.c rint.c snprintf.c
+	rm -f $(OBJS) pgstrcasecmp.c rint.c snprintf.c exports.list
