@@ -1,0 +1,48 @@
+# $PostgreSQL: pgsql/src/interfaces/ecpg/pgtypeslib/exports.txt,v 1.1 2007/10/03 13:20:19 meskes Exp $
+# Functions to be exported by pgtypeslib DLL
+PGTYPESdate_dayofweek		1
+PGTYPESdate_defmt_asc		2
+PGTYPESdate_fmt_asc		3
+PGTYPESdate_free		4
+PGTYPESdate_from_asc		5
+PGTYPESdate_from_timestamp	6
+PGTYPESdate_julmdy		7
+PGTYPESdate_mdyjul		8
+PGTYPESdate_new			9
+PGTYPESdate_to_asc		10
+PGTYPESdate_today		11
+PGTYPESdecimal_free		12
+PGTYPESdecimal_new		13
+PGTYPESinterval_copy		14
+PGTYPESinterval_free		15
+PGTYPESinterval_from_asc	16
+PGTYPESinterval_new		17
+PGTYPESinterval_to_asc		18
+PGTYPESnumeric_add		19
+PGTYPESnumeric_cmp		20
+PGTYPESnumeric_copy		21
+PGTYPESnumeric_div		22
+PGTYPESnumeric_free		23
+PGTYPESnumeric_from_asc		24
+PGTYPESnumeric_from_decimal	25
+PGTYPESnumeric_from_double	26
+PGTYPESnumeric_from_int		27
+PGTYPESnumeric_from_long	28
+PGTYPESnumeric_mul		29
+PGTYPESnumeric_new		30
+PGTYPESnumeric_sub		31
+PGTYPESnumeric_to_asc		32
+PGTYPESnumeric_to_decimal	33
+PGTYPESnumeric_to_double	34
+PGTYPESnumeric_to_int		35
+PGTYPESnumeric_to_long		36
+PGTYPEStimestamp_add_interval	37
+PGTYPEStimestamp_current	38
+PGTYPEStimestamp_defmt_asc	39
+PGTYPEStimestamp_defmt_scan	40
+PGTYPEStimestamp_fmt_asc	41
+PGTYPEStimestamp_from_asc	42
+PGTYPEStimestamp_sub		43
+PGTYPEStimestamp_sub_interval	44
+PGTYPEStimestamp_to_asc		45
+
