@@ -2259,5 +2259,8 @@ Wed, 03 Oct 2007 10:48:39 +0200
 	- Cleaned up ecpglib and renamed functions that do not need to be
 	  exported.
 	- Created export list for ecpglib.
+	- Also created export list for pgytpeslib and compatlib.
+	- Set pgtypes library version to 3.0.
+	- Set compat library version to 3.0.
 	- Set ecpg library version to 6.0.
 	- Set ecpg version to 4.4.
